# ParameterEstimation4Vital

./: .gitignore  README.md  pyproject.toml  研究文档.md
.kiro/specs/data-production-pipeline/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/synth-parameter-estimation/: .config.kiro  design.md  requirements.md  tasks.md
configs/: default.yaml  expansion_200k.yaml  production.yaml
docs/: 01_数据生产流水线技术文档.md  02_训练数据集使用指南.md  03_参数映射问题发现与解决.md
experiments/production_run/: production_summary.json
scripts/: debug_render_test.py  run_phase0.py  run_phase1.py  run_production.py  upload_to_modelscope.py
src/: __init__.py  audio_preprocessor.py  audio_renderer.py  batch_resampler.py  checkpoint_manager.py  discriminator.py  distribution_analyzer.py  embedding_extractor.py  multi_condition_renderer.py  parallel_producer.py  parameter_regressor.py  pipeline.py  preset_generator.py  preset_parser.py  quality_validator.py  smart_sampler.py  training_data.py
tests/: test_audio_preprocessor.py  test_audio_renderer.py  test_discriminator.py  test_distribution_analyzer.py  test_embedding_extractor.py  test_multi_condition_renderer.py  test_parallel_producer.py  test_parameter_regressor.py  test_pipeline.py  test_preset_generator.py  test_preset_parser.py  test_quality_validator.py  test_smart_sampler.py  test_training_data.py
